--- a/src/pages/Routes/RoutesPage.scss
+++ b/src/pages/Routes/RoutesPage.scss
@@ -29,17 +29,26 @@
 .image {
   width: 95px;
   height: 95px;
-  align-self: flex-start;
+  align-self: center;
 }
 
 .infoContainer {
-  margin-top: 20px;
-  width: 288px;
-  height: 179px;
-  border-radius: 22px;
-  border: 1px solid #a1caa3;
-  padding-left: 12px;
-  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.image {
+  width: 100px; /* Adjust size as needed */
+  height: 100px; /* Adjust size as needed */
+  margin-right: 20px; /* Adjust spacing as needed */
+}
+
+.itemDetails {
+  /* Add your preferred styling for item details */
+}
+
+.itemDetails p {
+  margin: 5px 0;
 }
 
 .title {
@@ -56,5 +65,4 @@
   width: 100%;
   margin: 0;
   margin-top: 20px;
-
 }
